Bug 1727008 - `HTMLEditor` shouldn't strip `<html>` element nor `<body>` elements r=m_kato

The new editor utility method does not stop scanning editable elements even if
it reaches the document root nor the (primary) `<body>` element.  Of course,
they should stop there if scanning editable block.  And
`ScanEmptyBlockInclusiveAncestor()` shouldn't store the removable empty block
element to them.

Differential Revision: https://phabricator.services.mozilla.com/D123316